#2158 FIX Condition column in WATO rule tables has now a flexible width
In previous versions this column had a fixed width, which could lead
to strange layout problems where this column is filled up and others
would have space for being shrunk to give the condition column more
space.

--- a/web/htdocs/wato.css
+++ b/web/htdocs/wato.css
@@ -609,10 +609,6 @@ table.validationerror img {
     text-shadow: 0px 1px 0px #fff;
 }
 
-.wato table.data.ruleset td.condition {
-    width: 360px;
-}
-
 /* Special styling for Timeperiods editor */
 .wato table.timeperiod td.name {
     width: 195px;
